jenkins zookeeper jvm